syntax = "proto3";
import "google/protobuf/timestamp.proto";

package ma;
option go_package = "github.com/KhanSufiyanMirza/mini-aspire-API/ma";

message User {
  int64 id = 1;
  string name = 2;
  string mobile = 3;
  string address = 4;
  string email = 5;
  google.protobuf.Timestamp password_changed_at = 6;
  string created_by = 7;
  string last_updated_by = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp last_updated_at = 10;
}